# uamp

./: .gitignore  CMakeLists.txt  README.md  build.sh
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/res/: resources.qrc
app/res/db/: UampDATABASE.drawio  uamp.db
app/res/googleAuth/: googleAuth.apps.googleusercontent.com.json
app/res/qss/: Default.qss  Obit.qss
app/src/: EditFileTagsDialog.cpp  EditFileTagsDialog.h  EditFileTagsDialog.ui  Equalizer.cpp  Equalizer.h  Equalizer.ui  FileTag.cpp  FileTag.h  GoogleAuthWrapper.cpp  GoogleAuthWrapper.h  ImageFile.h  ImportPlaylistView.cpp  ImportPlaylistView.h  ImportPlaylistView.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MenuPlaylistItemView.cpp  MenuPlaylistItemView.h  MenuPlaylistItemView.ui  PlayerController.cpp  PlayerController.h  PlayerView.cpp  PlayerView.h  PlayerView.ui  PlaylistListView.cpp  PlaylistListView.h  PlaylistListView.ui  PlaylistView.cpp  PlaylistView.h  Radio.cpp  Radio.h  Radio.ui  SideMenu.cpp  SideMenu.h  SideMenu.ui  SongTimeline.cpp  SongTimeline.h  SqlDatabase.cpp  SqlDatabase.h  (+13 more)
